refactor standard pagination and filters code
