# app/src/main/kotlin/net/termer/twinemedia/model/pagination/FilePagination.kt
@@ -1,6 +1,6 @@
 package net.termer.twinemedia.model.pagination
 
-import io.vertx.core.http.HttpServerRequest
+import io.vertx.ext.web.validation.RequestParameters
 import net.termer.twinemedia.dataobject.FileDto
 import net.termer.twinemedia.model.FilesModel.*
 import net.termer.twinemedia.service.CryptoService
@@ -15,22 +15,22 @@ import java.time.OffsetDateTime
 interface FilePagination<TColType>: RowPagination<FileDto, SortOrder, TColType> {
 	companion object {
 		@Suppress("UNCHECKED_CAST")
-		private fun CommonPagination.TokenData<SortOrder, *>.toPagination(): FilePagination<*> {
-			return when(sortEnum) {
+		private fun toPagination(tokenData: CommonPagination.TokenData<SortOrder, *>): FilePagination<*> {
+			return when(tokenData.sortEnum) {
 				SortOrder.CREATED_TS ->
-					CreatedTsPagination(this as CommonPagination.TokenData<SortOrder, OffsetDateTime>)
+					CreatedTsPagination(tokenData as CommonPagination.TokenData<SortOrder, OffsetDateTime>)
 				SortOrder.MODIFIED_TS ->
-					ModifiedTsPagination(this as CommonPagination.TokenData<SortOrder, OffsetDateTime>)
+					ModifiedTsPagination(tokenData as CommonPagination.TokenData<SortOrder, OffsetDateTime>)
 				SortOrder.TITLE_ALPHABETICALLY ->
-					TitlePagination(this as CommonPagination.TokenData<SortOrder, String>)
+					TitlePagination(tokenData as CommonPagination.TokenData<SortOrder, String>)
 				SortOrder.NAME_ALPHABETICALLY ->
-					NamePagination(this as CommonPagination.TokenData<SortOrder, String>)
+					NamePagination(tokenData as CommonPagination.TokenData<SortOrder, String>)
 				SortOrder.FILE_SIZE ->
-					FileSizePagination(this as CommonPagination.TokenData<SortOrder, Long>)
+					FileSizePagination(tokenData as CommonPagination.TokenData<SortOrder, Long>)
 				SortOrder.TAG_COUNT ->
-					TagCountPagination(this as CommonPagination.TokenData<SortOrder, Int>)
+					TagCountPagination(tokenData as CommonPagination.TokenData<SortOrder, Int>)
 				SortOrder.CHILD_COUNT ->
-					ChildCountPagination(this as CommonPagination.TokenData<SortOrder, Int>)
+					ChildCountPagination(tokenData as CommonPagination.TokenData<SortOrder, Int>)
 			}
 		}
 
@@ -50,55 +50,31 @@ interface FilePagination<TColType>: RowPagination<FileDto, SortOrder, TColType> 
 
 			return when(sort) {
 				SortOrder.CREATED_TS ->
-					CommonPagination.Timestamp.decodeTokenBytes(bytes, sortEnumVals, sort).toPagination()
+					toPagination(CommonPagination.Timestamp.decodeTokenBytes(bytes, sortEnumVals, sort))
 				SortOrder.MODIFIED_TS ->
-					CommonPagination.Timestamp.decodeTokenBytes(bytes, sortEnumVals, sort).toPagination()
+					toPagination(CommonPagination.Timestamp.decodeTokenBytes(bytes, sortEnumVals, sort))
 				SortOrder.TITLE_ALPHABETICALLY ->
-					CommonPagination.Text.decodeTokenBytes(bytes, sortEnumVals, sort).toPagination()
+					toPagination(CommonPagination.Text.decodeTokenBytes(bytes, sortEnumVals, sort))
 				SortOrder.NAME_ALPHABETICALLY ->
-					CommonPagination.Text.decodeTokenBytes(bytes, sortEnumVals, sort).toPagination()
+					toPagination(CommonPagination.Text.decodeTokenBytes(bytes, sortEnumVals, sort))
 				SortOrder.FILE_SIZE ->
-					CommonPagination.Integer.decodeTokenBytes(bytes, sortEnumVals, sort).toPagination()
+					toPagination(CommonPagination.Integer.decodeTokenBytes(bytes, sortEnumVals, sort))
 				SortOrder.TAG_COUNT ->
-					CommonPagination.Integer.decodeTokenBytes(bytes, sortEnumVals, sort).toPagination()
+					toPagination(CommonPagination.Integer.decodeTokenBytes(bytes, sortEnumVals, sort))
 				SortOrder.CHILD_COUNT ->
-					CommonPagination.Integer.decodeTokenBytes(bytes, sortEnumVals, sort).toPagination()
+					toPagination(CommonPagination.Integer.decodeTokenBytes(bytes, sortEnumVals, sort))
 			}
 		}
 
 		/**
 		 * Resolves an [FilePagination] object based on request parameters
+		 * @param params The request parameters to resolve pagination from
 		 * @return The [FilePagination] object
 		 * @throws PaginationTokenDecodeException If the token provided (if any) is malformed or decoding it fails for another reason
 		 * @since 2.0.0
 		 */
-		suspend fun HttpServerRequest.resolvePagination(): FilePagination<*> {
-			val params = params()
-
-			// Check for pagination token
-			val pageToken = params["page"]
-			if(pageToken == null) {
-				// Extract ordering from params
-				val order = if(params.contains("order"))
-					SortOrder.values().getOr(
-						params["order"].toIntOr(0),
-						SortOrder.CREATED_TS
-					)
-				else
-					SortOrder.CREATED_TS
-				val orderDesc = params["orderDesc"] == "true"
-
-				// Create token data without a cursor
-				return CommonPagination.TokenData(
-					sortEnum = order,
-					isSortedByDesc = orderDesc,
-					isPreviousCursor = false,
-					columnValue = null,
-					internalId = null
-				).toPagination()
-			} else {
-				return decodeToken(pageToken)
-			}
+		suspend fun resolvePaginationFromParameters(params: RequestParameters): FilePagination<*> {
+			return CommonPagination.resolvePaginationFromParameters(params, SortOrder.CREATED_TS, ::toPagination, ::decodeToken)
 		}
 	}
 
